More forge loading fixes