@@ -1,31 +1,26 @@
-package mods.thecomputerizer.theimpossiblelibrary.forge.v16.m5.core;
+package mods.thecomputerizer.theimpossiblelibrary.fabric.v18.m2.core.loader;
 
 import mods.thecomputerizer.theimpossiblelibrary.api.core.CoreAPI;
 import mods.thecomputerizer.theimpossiblelibrary.api.core.TILRef;
-import mods.thecomputerizer.theimpossiblelibrary.api.core.annotation.IndirectCallers;
-import mods.thecomputerizer.theimpossiblelibrary.api.core.loader.MultiVersionLoaderAPI;
 import mods.thecomputerizer.theimpossiblelibrary.api.core.loader.MultiVersionModCandidate;
 import mods.thecomputerizer.theimpossiblelibrary.api.core.loader.MultiVersionModInfo;
-import net.minecraftforge.fml.ModContainer;
-import net.minecraftforge.fml.ModList;
-import net.minecraftforge.fml.javafmlmod.FMLModContainer;
+import mods.thecomputerizer.theimpossiblelibrary.fabric.core.loader.MultiVersionLoaderFabric;
 
 import javax.annotation.Nullable;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collections;
+import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Optional;
+import java.util.Objects;
 import java.util.Set;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 
-public class MultiVersionLoaderForge1_16_5 extends MultiVersionLoaderAPI {
+public class MultiVersionLoaderFabric1_18_2 extends MultiVersionLoaderFabric {
     
-    protected MultiVersionLoaderForge1_16_5(CoreAPI parent) {
+    public MultiVersionLoaderFabric1_18_2(CoreAPI parent) {
         super(parent);
     }
     
@@ -39,11 +34,16 @@ public class MultiVersionLoaderForge1_16_5 extends MultiVersionLoaderAPI {
     
     @Override protected List<File> gatherCandidateModFiles(File root) {
         Set<File> set = new HashSet<>();
+        File[] mods = root.listFiles(file -> file.isFile() && file.getName().endsWith(".jar"));
+        if(Objects.nonNull(mods)) {
+            TILRef.logInfo("Adding {} potential mod files",mods.length);
+            set.addAll(Arrays.asList(mods));
+        } else TILRef.logInfo("Adding 0 potential mod files");
         for(Path path : this.potentialModPaths) {
             File file = path.toFile();
             if(file.isFile() && file.getName().endsWith(".jar")) set.add(file);
         }
-        return Collections.unmodifiableList(new ArrayList<>(set));
+        return List.copyOf(set);
     }
     
     @Override protected @Nullable Attributes getFileAttributes(File file) {
@@ -53,13 +53,6 @@ public class MultiVersionLoaderForge1_16_5 extends MultiVersionLoaderAPI {
             TILRef.logError("Error getting attributes for jar file {}",file,ex);
         }
         return null;
-    }
-    
-    @IndirectCallers
-    public FMLModContainer getModContainer(String modid) {
-        ModList list = ModList.get();
-        Optional<? extends ModContainer> container = list.getModContainerById(modid);
-        return (FMLModContainer)container.orElse(null);
     }
     
     @Override protected MultiVersionModInfo loadModInfo(
